word wrap fix for text overflow

--- a/css/dgrid.css
+++ b/css/dgrid.css
@@ -28,6 +28,7 @@
 }
 .dgrid-header .dgrid-cell {
 		overflow: visible;
+		word-wrap: break-word;
 }
 
 .dgrid-row-table {
